@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.53 2000-07-07 06:41:08 macgyver Exp $
+$Id: NEWS,v 1.54 2000-07-11 14:10:33 macgyver Exp $
 
 1.2.0 - Released: ???
 ---------------------
@@ -55,6 +55,7 @@ $Id: NEWS,v 1.53 2000-07-07 06:41:08 macgyver Exp $
 - Added SQLKey, SQLKeyField, and SQLAuthoritative to mod_sql.
 - Fixed access checks for LIST and NLST.
 - Cleaned up use of '.' and '..' in mod_ls.
+- Fixed a case where ServerUseReverseDNS wasn't being honored.
 
 1.2.0pre10 - Released: 1/17/00
 ------------------------------
